# pose64

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeListsEXAMPLE.txt  README.md  build.sh
Skins/: ReadMe.txt
Skins/Handspring/: WhereAreTheSkins.txt
Skins/Palm/: Palm_III.skin  Palm_IIIc.skin  Palm_IIIe.skin  Palm_IIIx.skin  Palm_Pilot.skin  Palm_V.skin  Palm_VII.skin  Palm_VIIx.skin  Palm_i705.skin  Palm_m100.skin  Palm_m130.skin  Palm_m500.skin  Palm_m505.skin  Palm_m515.skin  Pilot.skin  Workpad.skin  Workpad_c3.skin
Skins/Symbol/: Symbol_1500.skin  Symbol_1700.skin
Skins/Trg/: HandEra330.skin  HandEra330Cards.skin  TRGpro.skin
data/: ca.vibekoder.pose64.desktop  ca.vibekoder.pose64.metainfo.xml  pose64.rc
debian/: changelog  control  copyright
docs/: benchmark-analysis-m500.md  best32to64portingpractices.md  current-state.md  debugging-guide.md  deterministic-canary.md  gdb-crash-debugging.md  lp64-elimination-log.md  meta-check-accessok-bug.md  qt-port-architectural-review.md  qtportpose-v2-plan.md  timer-accuracy-findings.md  timer-accuracy.md  violation-ignore-feature.md  winuae-gencpu-fork-postmortem.md
docs/ReControlPostMortem/: LETTER-TO-DEVELOPERS.md  RECONTROL.md  recontrol-internals.md
docs/history/: 2026-02-16-cpu-efficiency-plan.md  2026-02-16-timer-accuracy-design.md  bus-overhead-reality.md  default-violations-off.md  uae-vs-musashi.md  winuae-upgrade-analysis.md
docs/plans/: 2026-02-16-timer-accuracy-plan.md  2026-02-18-debug-build-methodology-design.md
installer/: pose64.nsi
patches/: 00-pose-configure-fixes.patch  00b-pose-init-clipwidget.patch  01-pose-uncomment-standard-includes.patch  02-pose-add-typename-keywords.patch  03-pose-add-limits-h.patch  06-pose-scalar-filler-braces.patch  07-pose-protected-member-access.patch  08-pose-template-instantiations.patch  09-pose-fltk11-filename-api.patch  10-pose-menu-strdup.patch  11-fltk-friend-default-args.patch  12-fltk-fl_draw-min-macro.patch
scripts/: build-appimage.sh
sources/: fltk-1.1.10-source.tar.bz2
src/: CMakeLists.txt  banner.xcf  icon.xcf
src/core/: ATraps.cpp  Byteswapping.cpp  Byteswapping.h  CGremlins.cpp  CGremlins.h  CGremlinsStubs.cpp  ChunkFile.cpp  ChunkFile.h  DebugMgr.cpp  EcmIf.h  EmAction.cpp  EmAction.h  EmApplication.cpp  EmApplication.h  EmCommands.h  EmCommon.cpp  EmCommon.h  EmCommonUnix.h  EmCommonWin.h  EmDevice.cpp  EmDevice.h  EmDeviceBenchmark.h  EmDirRef.cpp  EmDirRef.h  EmDlg.cpp  EmDlg.h  EmDocument.cpp  EmEventOutput.cpp  EmEventOutput.h  EmEventPlayback.cpp  EmEventPlayback.h  EmException.cpp  EmException.h  EmExgMgr.cpp  EmExgMgr.h  EmFileImport.cpp  EmFileImport.h  EmFileRef.cpp  EmFileRef.h  EmJPEG.cpp  (+82 more)
src/core/Hardware/: EmBankDRAM.cpp  EmBankDummy.cpp  EmBankMapped.cpp  EmBankROM.cpp  EmBankRegs.cpp  EmBankSRAM.cpp  EmCPU.cpp  EmCPU68K.cpp  EmCPU68K.h  EmCPUARM.cpp  EmHAL.cpp  EmHAL.h  EmMemory.cpp  EmMemory.h  EmRegs.cpp  EmRegs.h  EmRegs328.cpp  EmRegs328.h  EmRegs328PalmPilot.cpp  EmRegs328Symbol1700.cpp  EmRegsASICSymbol1700.cpp  EmRegsEZ.cpp  EmRegsEZ.h  EmRegsEZPalmIIIc.cpp  EmRegsEZPalmM100.cpp  EmRegsEZPalmV.cpp  EmRegsEZPalmVII.cpp  EmRegsEZPalmVIIx.cpp  EmRegsEZTRGpro.cpp  EmRegsEZTemp.cpp  EmRegsEZVisor.cpp  EmRegsFrameBuffer.cpp  EmRegsMediaQ11xx.cpp  EmRegsMediaQ11xx.h  EmRegsPLDPalmVIIEZ.cpp  EmRegsSED1375.cpp  EmRegsSED1376.cpp  EmRegsSZ.cpp  EmRegsSZTemp.cpp  EmRegsUSBPhilipsPDIUSBD12.cpp  (+14 more)
src/core/Hardware/TRG/: EmRegs330CPLD.cpp  EmSPISlave330Current.cpp  EmTRG.cpp  EmTRGATA.cpp  EmTRGCF.cpp  EmTRGCFIO.cpp  EmTRGCFMem.cpp  EmTRGDiskIO.cpp  EmTRGDiskType.cpp  EmTRGSD.cpp
src/core/Palm/Platform/Core/System/IncsPrv/: MemoryPrv.h
src/core/Palm/Platform/Incs/: PalmTypes.h
src/core/Patches/: EmPatchIf.h  EmPatchLoader.cpp  EmPatchLoader.h  EmPatchMgr.cpp  EmPatchModule.cpp  EmPatchModule.h  EmPatchModuleHtal.cpp  EmPatchModuleMap.cpp  EmPatchModuleMap.h  EmPatchModuleMemMgr.cpp  EmPatchModuleNetLib.cpp  EmPatchModuleSys.cpp  EmPatchModuleTypes.h  EmPatchState.cpp  EmPatchState.h
src/core/UAE/: cpuemu.c
src/core/jpeg/: jinclude.h
src/core/omnithread/: omnithread.h
src/platform/: EmApplicationQt.cpp  EmApplicationQt.h  EmCommonQt.h  EmDirRefUnix.cpp  EmDirRefWin.cpp  EmDlgQt.cpp  EmDlgQt.h  EmDocumentUnix.cpp  EmDocumentWin.cpp  EmFileRefUnix.cpp  EmFileRefWin.cpp  EmPixMapUnix.cpp  EmPixMapWin.cpp  EmTransportSerialUnix.cpp  EmTransportSerialUnix.h  EmTransportSerialWin.cpp  EmTransportUSBUnix.cpp  EmWindowQt.cpp  EmWindowQt.h  EmWindowUnix.cpp  Platform_Unix.cpp  Platform_Win.cpp  ResStrings.cpp  ResStrings.h
src/ui/: main.cpp
tools/: mkico.c
